[CoordinatedGraphics] serviceScriptedAnimations expects time in seconds https://bugs.webkit.org/show_bug.cgi?id=112582

Reviewed by Andreas Kling.

Source/WebKit/qt:

We've been exposing different time unit for requestAnimationFrame because
of wrong conversion before serviceScriptedAnimations function calls.
Fixed it to use seconds instead of milliseconds.

* WebCoreSupport/ChromeClientQt.cpp: Remove unnecessary conversion.

Source/WebKit2:

We've been exposing different time unit for requestAnimationFrame because
of wrong conversion before serviceScriptedAnimations function calls.
Fixed it to use seconds instead of milliseconds.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::syncDisplayState): Remove unnecessary conversion.

LayoutTests:

Add test to measure if the time interval is coherent with the unit
of DOMTimeStamp (milliseconds) by comparing it with Date.now() interval.

* fast/animation/request-animation-frame-time-unit-expected.txt: Added.
* fast/animation/request-animation-frame-time-unit.html: Added.
* fast/animation/script-tests/request-animation-frame-time-unit.js: Added.

Canonical link: https://commits.webkit.org/132647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148022 268f45cc-cd09-0410-ab3c-d52691b4dbfc